<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical"
            tools:context=".MainActivity">


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="195dp"
                android:src="@drawable/mainm" />

            <TextView
                android:id="@+id/text_view_webuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15sp"
                android:layout_marginStart="15sp"
                android:layout_marginTop="5sp"
                android:text="@string/businessinfo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

            <TextView
                android:id="@+id/cntctus_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="15dp"
                android:text="@string/contactinfo"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textColor="#F50057"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/mngr_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="10dp"
                android:text="@string/managerinfo"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/mblno"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/mobilenumber"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/email_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/Email"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/website_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="33dp"
                android:layout_marginStart="33dp"
                android:layout_marginTop="15dp"
                android:text="@string/website"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textColor="#F50057"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/siteulr_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:autoSizeMaxTextSize="16sp"
                android:text="@string/Businesswebsitename"
                android:textColor="#000000"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/lctn_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="15dp"
                android:text="@string/location"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textColor="#F50057"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lctndetails_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/locationdetails"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wrknghrs_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="34dp"
                android:layout_marginStart="34dp"
                android:layout_marginTop="15dp"
                android:text="@string/worknghrs"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                android:textColor="#F50057"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/wrknghrsdetails_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="5dp"
                android:text="@string/wrkngtmngs"
                android:textColor="#000000"
                android:textSize="16sp" />


        </LinearLayout>

    </TableLayout>
</ScrollView>



